update version for 101 dev branch

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "magento/magento-cloud-configuration",
   "description": "Provides default configuration to build and deploy Magento 2 Enterprise Edition",
-  "version": "101.0.4",
+  "version": "101-dev",
   "license": [
       "OSL-3.0",
       "AFL-3.0"
