--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "magento/magento-cloud-configuration",
   "description": "Provides default configuration to build and deploy Magento 2 Enterprise Edition",
-  "version": "101.4.0",
+  "version": "102.0.0-dev",
   "license": [
       "OSL-3.0",
       "AFL-3.0"
