--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
     }
   },
   "bin":[
-    "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump"
+    "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump", "m2-ece-db-dump"
   ]
 }
