--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     "php": ">=5.6.0",
     "monolog/monolog": "^1.17"
   },
+  "require-dev": {
+    "phpunit/phpunit": "4.1"
+  },
   "bin":[
     "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump"
   ],
@@ -17,5 +20,10 @@
     "psr-4": {
       "Magento\\": "src/Magento/"
     }
+  },
+  "scripts": {
+    "test": [
+      "phpunit"
+    ]
   }
 }
