--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "monolog/monolog": "^1.17"
+    "monolog/monolog": "^1.17",
+    "symfony/console": "^2.6"
   },
   "require-dev": {
     "phpunit/phpunit": "4.1"
