--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "monolog/monolog": "^1.17"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.1"
+    "phpunit/phpunit": "4.1",
+    "squizlabs/php_codesniffer": " 1.5.3"
   },
   "bin":[
     "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump"
@@ -23,7 +24,8 @@
   },
   "scripts": {
     "test": [
-      "phpunit"
+      "phpunit",
+      "vendor/bin/phpcs src --standard=ruleset.xml"
     ]
   }
 }
