--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "4.1",
-    "squizlabs/php_codesniffer": " 1.5.3"
+    "squizlabs/php_codesniffer": " ^3.0"
   },
   "bin":[
     "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump"
