MAGECLOUD-909: Add PHP CS to ECE Tools
- fixed $iterator

--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
   },
   "scripts": {
     "test": [
-      "phpunit",
-      "vendor/bin/phpcs src --standard=ruleset.xml"
+      "phpunit -c phpunit.xml.dist",
+      "phpcs src --standard=ruleset.xml"
     ]
   }
 }
