--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "scripts": {
     "test": [
       "phpunit -c phpunit.xml.dist",
-      "phpcs src --standard=ruleset.xml"
+      "phpcs src --standard=ruleset.xml -p -n"
     ]
   }
 }
