--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "4.1",
-    "squizlabs/php_codesniffer": " ^3.0"
+    "squizlabs/php_codesniffer": " ^3.0",
+    "doctrine/instantiator": "1.0.5"
   },
   "bin":[
     "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump"
