--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "doctrine/instantiator": "1.0.5"
   },
   "bin":[
-    "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump"
+    "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump", "m2-ece-db-dump"
   ],
   "autoload": {
     "psr-4": {
