--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
   "require": {
     "php": ">=5.6.0",
     "monolog/monolog": "^1.17",
-    "symfony/console": "^2.6"
+    "symfony/console": "^2.6",
+    "illuminate/container": "^5.4",
+    "psr/log": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.1",
+    "phpunit/phpunit": "~6.2.0",
     "squizlabs/php_codesniffer": " ^3.0",
     "doctrine/instantiator": "1.0.5"
   },
