--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
       "AFL-3.0"
   ],
   "require": {
-    "php": ">=5.6.0",
+    "php": "^7.0",
     "monolog/monolog": "^1.17",
     "symfony/console": "^2.6",
     "illuminate/container": "^5.4",
