--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "monolog/monolog": "^1.17",
     "symfony/console": "^2.6",
     "illuminate/container": "^5.4",
-    "psr/log": "^1.0"
+    "psr/log": "^1.0",
+    "psr/container": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
@@ -31,5 +32,6 @@
       "phpunit -c phpunit.xml.dist",
       "phpcs src --standard=ruleset.xml -p -n"
     ]
-  }
+  },
+  "prefer-stable": true
 }
