--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
     "squizlabs/php_codesniffer": " ^3.0",
-    "doctrine/instantiator": "1.0.5"
+    "doctrine/instantiator": "1.0.5",
+    "phpmd/phpmd": "@stable"
   },
   "bin":[
     "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump", "bin/ece-tools"
@@ -30,7 +31,8 @@
   "scripts": {
     "test": [
       "phpunit -c phpunit.xml.dist",
-      "phpcs src --standard=ruleset.xml -p -n"
+      "phpcs src --standard=phpcs-ruleset.xml -p -n",
+      "phpmd src/Magento/MagentoCloud xml phpmd-ruleset.xml"
     ]
   },
   "prefer-stable": true
