--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,21 @@
       "AFL-3.0"
   ],
   "require": {
-    "php": ">=5.6.0",
+    "php": "^7.0",
     "monolog/monolog": "^1.17",
-    "symfony/console": "^2.6"
+    "symfony/console": "^2.6",
+    "illuminate/container": "^5.4",
+    "psr/log": "^1.0",
+    "psr/container": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.1",
+    "phpunit/phpunit": "~6.2.0",
     "squizlabs/php_codesniffer": " ^3.0",
-    "doctrine/instantiator": "1.0.5"
+    "doctrine/instantiator": "1.0.5",
+    "phpmd/phpmd": "@stable"
   },
   "bin":[
-    "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump"
+    "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump", "bin/ece-tools"
   ],
   "autoload": {
     "psr-4": {
@@ -27,7 +31,9 @@
   "scripts": {
     "test": [
       "phpunit -c phpunit.xml.dist",
-      "phpcs src --standard=ruleset.xml -p -n"
+      "phpcs src --standard=phpcs-ruleset.xml -p -n",
+      "phpmd src xml phpmd-ruleset.xml"
     ]
-  }
+  },
+  "prefer-stable": true
 }
