--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "test": [
-      "phpunit -c phpunit.xml.dist",
+      "phpunit src",
       "phpcs src --standard=phpcs-ruleset.xml -p -n",
       "phpmd src xml phpmd-ruleset.xml"
     ]
