--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "symfony/console": "^2.6",
     "illuminate/container": "^5.4",
     "psr/log": "^1.0",
-    "psr/container": "^1.0"
+    "psr/container": "^1.0",
+    "composer/composer": "^1.5"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
