--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "illuminate/container": "^5.5",
     "psr/log": "^1.0",
     "psr/container": "^1.0",
-    "composer/composer": "^1.5"
+    "composer/composer": "@stable"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
