--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
     "illuminate/container": "^5.5",
     "psr/log": "^1.0",
     "psr/container": "^1.0",
-    "composer/composer": "@stable",
-    "php-mock/php-mock-phpunit": "^2.0"
+    "composer/composer": "@stable"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
     "squizlabs/php_codesniffer": " ^3.0",
     "doctrine/instantiator": "1.0.5",
-    "phpmd/phpmd": "@stable"
+    "phpmd/phpmd": "@stable",
+    "php-mock/php-mock-phpunit": "^2.0"
   },
   "bin":[
     "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump", "bin/ece-tools"
