MAGECLOUD-1046: Prepare Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install: composer install --no-interaction --prefer-dist
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS integration_tests;'
 script:
-  - vendor/bin/phpcs src --standard=phpcs-ruleset.xml -p -n
-  - vendor/bin/phpmd src xml phpmd-ruleset.xml
-  - vendor/bin/phpunit --testsuite Unit
-  - vendor/bin/phpunit --testsuite Integration
+  - phpcs src --standard=phpcs-ruleset.xml -p -n
+  - phpmd src xml phpmd-ruleset.xml
+  - phpunit --testsuite Unit
+  - phpunit --testsuite Integration
