--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,14 @@ php:
 env:
   global:
     - COMPOSER_BIN_DIR=~/bin
+  matrix:
+    - TEST_SUITE=static
+    - TEST_SUITE=unit
+    - TEST_SUITE=integration
+matrix:
+  exclude:
+    - php: 7.1
+      env: TEST_SUITE=integration
 cache:
   apt: true
   directories:
@@ -18,7 +26,7 @@ install: composer install --no-interaction --prefer-dist
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS integration_tests;'
 script:
-  - phpcs src --standard=phpcs-ruleset.xml -p -n
-  - phpmd src xml phpmd-ruleset.xml
-  - phpunit --testsuite Unit
-  - phpunit --testsuite Integration
+  - if [ $TEST_SUITE == "static" ]; then phpcs src --standard=phpcs-ruleset.xml -p -n; fi
+  - if [ $TEST_SUITE == "static" ]; then phpmd src xml phpmd-ruleset.xml; fi
+  - if [ $TEST_SUITE == "unit" ]; then phpunit --testsuite Unit; fi
+  - if [ $TEST_SUITE == "integration" ]; then phpunit --testsuite Integration; fi
