MAGECLOUD-1046: Prepare Travis CI

--- a/src/Magento/MagentoCloud/Test/Integration/etc/environment.php.dist
+++ b/src/Magento/MagentoCloud/Test/Integration/etc/environment.php.dist
@@ -5,8 +5,8 @@ return [
         'database' => [
             0 => [
                 'host' => '127.0.0.1',
-                'path' => 'magento2',
-                'password' => '1234',
+                'path' => 'integration_tests',
+                'password' => '',
                 'username' => 'root',
                 'port' => '3306',
             ],
