--- a/tests/unit/phpunit.xml.dist
+++ b/tests/unit/phpunit.xml.dist
@@ -4,15 +4,12 @@
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/6.1/phpunit.xsd"
          colors="true"
          columns="max"
-         bootstrap="autoload.php"
+         bootstrap="../../autoload.php"
          beStrictAboutTestsThatDoNotTestAnything="false"
 >
     <testsuites>
         <testsuite name="Unit">
-            <directory suffix="Test.php">src/*/*/Test/Unit</directory>
-        </testsuite>
-        <testsuite name="Integration">
-            <directory suffix="Test.php">src/*/*/Test/Integration</directory>
+            <directory suffix="Test.php">../../src/*/*/Test/Unit</directory>
         </testsuite>
     </testsuites>
 
