--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "illuminate/container": "^5.5",
     "psr/log": "^1.0",
     "psr/container": "^1.0",
-    "composer/composer": "@stable"
+    "composer/composer": "@stable",
+    "composer/semver": "^1.4"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
