--- a/src/Magento/MagentoCloud/Test/Integration/etc/auth.json.dist
+++ b/src/Magento/MagentoCloud/Test/Integration/etc/auth.json.dist
@@ -1,1 +1,8 @@
-{}
+{
+   "http-basic": {
+      "repo.magento.com": {
+         "username": "<public-key>",
+         "password": "<private-key>"
+      }
+   }
+}
