--- a/src/Magento/MagentoCloud/Test/Integration/etc/environment.php.dist
+++ b/src/Magento/MagentoCloud/Test/Integration/etc/environment.php.dist
@@ -25,4 +25,19 @@ return [
     'variables' => [
 
     ],
+    'deploy' => [
+        'types' => [
+            'git' => [
+                'repo' => 'https://github.com/magento/magento-cloud',
+                'version' => '2.1.9',
+            ],
+            'project' => [
+                'repo' => 'https://connect20-qa01.magedevteam.com/',
+                'name' => 'magento/project-enterprise-edition',
+                'version' => '2.2',
+            ],
+
+        ],
+        'type' => 'project',
+    ],
 ];
