--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,11 @@ cache:
   directories:
     - $HOME/.composer/cache
 install:
-  - if [ -n "$GH_TOKEN" ]; then composer config -g github-oauth.github.com ${GH_TOKEN}; fi;
-  - if [ -n "$REPO_USERNAME" ]; then composer config -g http-basic.repo.magento.com.username ${REPO_USERNAME}; fi;
-  - if [ -n "$REPO_PASSWORD" ]; then composer config -g http-basic.repo.magento.com.password ${REPO_PASSWORD}; fi;
-  - if [ -n "$CONNECT20_USERNAME" ]; then composer config -g http-basic.connect20-qa01.magedevteam.com.username ${CONNECT20_USERNAME}; fi;
-  - if [ -n "$CONNECT20_PASSWORD" ]; then composer config -g http-basic.connect20-qa01.magedevteam.com.password ${CONNECT20_PASSWORD}; fi;
+  - composer config -g github-oauth.github.com ${GH_TOKEN}
+  - composer config -g http-basic.repo.magento.com.username ${REPO_USERNAME}
+  - composer config -g http-basic.repo.magento.com.password ${REPO_PASSWORD}
+  - composer config -g http-basic.connect20-qa01.magedevteam.com.username ${CONNECT20_USERNAME}
+  - composer config -g http-basic.connect20-qa01.magedevteam.com.password ${CONNECT20_PASSWORD}
   - composer config --list
   - composer install --no-interaction --prefer-dist
 before_install:
