--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,7 @@ cache:
   directories:
     - $HOME/.composer/cache
 install:
-  - composer config -g github-oauth.github.com ${GH_TOKEN}
-  - composer config -g http-basic.repo.magento.com.username ${REPO_USERNAME}
-  - composer config -g http-basic.repo.magento.com.password ${REPO_PASSWORD}
-  - composer config -g http-basic.connect20-qa01.magedevteam.com.username ${CONNECT20_USERNAME}
-  - composer config -g http-basic.connect20-qa01.magedevteam.com.password ${CONNECT20_PASSWORD}
+  - composer config --global --auth github-oauth.github.com "$GH_TOKEN"
   - composer config --list
   - composer install --no-interaction --prefer-dist
 before_install:
