--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,9 @@ cache:
   directories:
     - $HOME/.composer/cache
 install:
-  - composer config --global --auth github-oauth.github.com ${GH_TOKEN}
-  - composer config --global --auth http-basic.repo.magento.com.username ${REPO_USERNAME}
-  - composer config --global --auth http-basic.repo.magento.com.password ${REPO_PASSWORD}
-  - composer config --global --auth http-basic.connect20-qa01.magedevteam.com.username ${CONNECT20_USERNAME}
-  - composer config --global --auth http-basic.connect20-qa01.magedevteam.com.password ${CONNECT20_PASSWORD}
+  - composer config -g -a github-oauth.github.com ${GH_TOKEN}
+  - composer config -g -a http-basic.repo.magento.com ${REPO_USERNAME} ${REPO_PASSWORD}
+  - composer config -g -a http-basic.connect20-qa01.magedevteam.com ${CONNECT20_USERNAME} ${CONNECT20_PASSWORD}
   - composer config --list
   - composer install --no-interaction --prefer-dist
 before_install:
