--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ cache:
   directories:
     - $HOME/.composer/cache
 install:
-  - composer config -g -a github-oauth.github.com ${GH_TOKEN}
-  - composer config -g -a http-basic.repo.magento.com ${REPO_USERNAME} ${REPO_PASSWORD}
-  - composer config -g -a http-basic.connect20-qa01.magedevteam.com ${CONNECT20_USERNAME} ${CONNECT20_PASSWORD}
+  - composer config -g -a github-oauth.github.com "$GH_TOKEN"
+  - composer config -g -a http-basic.repo.magento.com "$REPO_USERNAME" "$REPO_PASSWORD"
+  - composer config -g -a http-basic.connect20-qa01.magedevteam.com "$CONNECT20_USERNAME" "$CONNECT20_PASSWORD"
   - composer config --list
   - composer install --no-interaction --prefer-dist
 before_install:
