--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
   "description": "Provides tools to build and deploy Magento 2 Enterprise Edition",
   "version": "2002.0",
   "license": [
-      "OSL-3.0",
-      "AFL-3.0"
+    "OSL-3.0",
+    "AFL-3.0"
   ],
   "require": {
     "php": "^7.0",
@@ -13,7 +13,8 @@
     "illuminate/container": "^5.5",
     "psr/log": "^1.0",
     "psr/container": "^1.0",
-    "composer/composer": "@stable"
+    "composer/composer": "@stable",
+    "composer/semver": "^1.4"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
@@ -22,8 +23,11 @@
     "phpmd/phpmd": "@stable",
     "php-mock/php-mock-phpunit": "^2.0"
   },
-  "bin":[
-    "m2-ece-build", "m2-ece-deploy", "m2-ece-scd-dump", "bin/ece-tools"
+  "bin": [
+    "m2-ece-build",
+    "m2-ece-deploy",
+    "m2-ece-scd-dump",
+    "bin/ece-tools"
   ],
   "autoload": {
     "psr-4": {
@@ -32,10 +36,11 @@
   },
   "scripts": {
     "test": [
-      "phpunit src",
-      "phpcs src --standard=phpcs-ruleset.xml -p -n",
-      "phpmd src xml phpmd-ruleset.xml"
+      "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
+      "phpmd src xml tests/static/phpmd-ruleset.xml",
+      "phpunit --configuration tests/unit/phpunit.xml.dist"
     ]
   },
+  "process-timeout": 600,
   "prefer-stable": true
 }
