--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,11 @@ install:
   - composer install --no-interaction
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS integration_tests;'
+before_script:
+  - cd tests/integration/etc && composer config -a github-oauth.github.com "$GH_TOKEN"
+  - cd tests/integration/etc && composer config -a http-basic.repo.magento.com "$REPO_USERNAME" "$REPO_PASSWORD"
+  - cd tests/integration/etc && composer config -a http-basic.connect20-qa01.magedevteam.com "$CONNECT20_USERNAME" "$CONNECT20_PASSWORD"
+  - cd tests/integration/etc && composer config --list
 script:
   - if [ $TEST_SUITE == "static" ]; then phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n; fi;
   - if [ $TEST_SUITE == "static" ]; then phpmd src xml tests/static/phpmd-ruleset.xml; fi;
