--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,10 @@ install:
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS integration_tests;'
 before_script:
-  - cd tests/integration/etc && composer config -a -n github-oauth.github.com "$GH_TOKEN"
-  - cd tests/integration/etc && composer config -a -n http-basic.repo.magento.com "$REPO_USERNAME" "$REPO_PASSWORD"
-  - cd tests/integration/etc && composer config -a -n http-basic.connect20-qa01.magedevteam.com "$CONNECT20_USERNAME" "$CONNECT20_PASSWORD"
-  - cd tests/integration/etc && composer config --list
+  - if [ $TEST_SUITE == "integration" ]; then composer config -a -n -d tests/integration/etc github-oauth.github.com "$GH_TOKEN"; fi;
+  - if [ $TEST_SUITE == "integration" ]; then composer config -a -n -d tests/integration/etc http-basic.repo.magento.com "$REPO_USERNAME" "$REPO_PASSWORD"; fi;
+  - if [ $TEST_SUITE == "integration" ]; then composer config -a -n -d tests/integration/etc http-basic.connect20-qa01.magedevteam.com "$CONNECT20_USERNAME" "$CONNECT20_PASSWORD"; fi;
+  - if [ $TEST_SUITE == "integration" ]; then composer config -d tests/integration/etc --list; fi;
 script:
   - if [ $TEST_SUITE == "static" ]; then phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n; fi;
   - if [ $TEST_SUITE == "static" ]; then phpmd src xml tests/static/phpmd-ruleset.xml; fi;
