MAGECLOUD-1062: Eliminate TestCase bootstrap

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,8 @@ install:
   - composer install --no-interaction
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS integration_tests;'
-before_script:
-  - if [ $TEST_SUITE == "integration" ]; then composer config -a -n -d tests/integration/etc github-oauth.github.com "$GH_TOKEN"; fi;
-  - if [ $TEST_SUITE == "integration" ]; then composer config -a -n -d tests/integration/etc http-basic.repo.magento.com "$REPO_USERNAME" "$REPO_PASSWORD"; fi;
-  - if [ $TEST_SUITE == "integration" ]; then composer config -a -n -d tests/integration/etc http-basic.connect20-qa01.magedevteam.com "$CONNECT20_USERNAME" "$CONNECT20_PASSWORD"; fi;
-  - if [ $TEST_SUITE == "integration" ]; then composer config -d tests/integration/etc --list; fi;
+  - tests/travis/before_install.sh
+before_script: tests/travis/before_script.sh
 script:
   - if [ $TEST_SUITE == "static" ]; then phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n; fi;
   - if [ $TEST_SUITE == "static" ]; then phpmd src xml tests/static/phpmd-ruleset.xml; fi;
