MAGECLOUD-1062: Eliminate TestCase bootstrap

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-sudo: false
+sudo: required
 dist: trusty
+group: edge
 services:
   - mysql
 language: php
@@ -21,10 +22,8 @@ cache:
   apt: true
   directories:
     - $HOME/.composer/cache
-install:
-  - composer install --no-interaction
-before_install:
-  - mysql -e 'CREATE DATABASE IF NOT EXISTS integration_tests;'
+install: composer install --no-interaction
+before_install: ./tests/travis/before_install.sh
 before_script: ./tests/travis/before_script.sh
 script:
   - if [ $TEST_SUITE == "static" ]; then phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n; fi;
