MAGECLOUD-1062: Eliminate TestCase bootstrap

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ cache:
   apt: true
   directories:
     - $HOME/.composer/cache
+before_install: ./tests/travis/before_install.sh
 install: composer install --no-interaction
 before_script: ./tests/travis/before_script.sh
 script:
