--- a/tests/integration/etc/environment.php.dist
+++ b/tests/integration/etc/environment.php.dist
@@ -32,9 +32,9 @@ return [
                 'version' => '2.1.9',
             ],
             'project' => [
-                'repo' => 'https://connect20-qa01.magedevteam.com/',
-                'name' => 'magento/project-enterprise-edition',
-                'version' => '2.2',
+                'repo' => 'https://repo.magento.com/',
+                'name' => 'magento/project-community-edition',
+                'version' => '2.*',
             ],
 
         ],
