--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,8 @@ cache:
   apt: true
   directories:
     - $HOME/.composer/cache
-install:
-  - composer install --no-interaction
-before_install:
-  - mysql -e 'CREATE DATABASE IF NOT EXISTS integration_tests;'
+before_install: ./tests/travis/before_install.sh
+install: composer install --no-interaction
 script:
   - if [ $TEST_SUITE == "static" ]; then phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n; fi;
   - if [ $TEST_SUITE == "static" ]; then phpmd src xml tests/static/phpmd-ruleset.xml; fi;
