--- a/tests/unit/phpunit.xml.dist
+++ b/tests/unit/phpunit.xml.dist
@@ -12,6 +12,14 @@
             <directory suffix="Test.php">../../src/*/*/Test/Unit</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <whitelist addUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">../../src/*/*</directory>
+            <exclude>
+                <directory>../../src/*/*/Test</directory>
+            </exclude>
+        </whitelist>
+    </filter>
 
     <php>
         <ini name="date.timezone" value="UTC"/>
