--- a/tests/integration/etc/environment.php.dist
+++ b/tests/integration/etc/environment.php.dist
@@ -34,7 +34,7 @@ return [
             'project' => [
                 'repo' => 'https://repo.magento.com/',
                 'name' => 'magento/project-community-edition',
-                'version' => '2.*',
+                'version' => '^2.2',
             ],
 
         ],
