MAGECLOUD-1020: [develop] Enterprise Cloud Edition Sets Up an Admin User with A Default Password

--- a/tests/integration/etc/environment.php.dist
+++ b/tests/integration/etc/environment.php.dist
@@ -23,7 +23,7 @@ return [
         ],
     ],
     'variables' => [
-
+        'ADMIN_EMAIL' => 'admin@example.com',
     ],
     'deploy' => [
         'types' => [
