--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "squizlabs/php_codesniffer": " ^3.0",
     "phpmd/phpmd": "@stable",
     "php-mock/php-mock-phpunit": "^2.0",
-    "phpunit/php-code-coverage": "^5.2"
+    "phpunit/php-code-coverage": "^5.2",
+    "illuminate/config": "^5.5"
   },
   "bin": [
     "m2-ece-build",
