--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "magento/ece-tools",
+  "name": "magentoese/ece-tools",
   "description": "Provides tools to build and deploy Magento 2 Enterprise Edition",
   "version": "2002.0.1",
   "license": [
