--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "psr/log": "^1.0",
     "psr/container": "^1.0",
     "composer/composer": "@stable",
-    "composer/semver": "^1.4"
+    "composer/semver": "^1.4",
+    "symfony/yaml": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
