--- a/tests/integration-docker/global.env
+++ b/tests/integration-docker/global.env
@@ -1,7 +1,7 @@
 MAGENTO_RUN_MODE=developer
 PHP_MEMORY_LIMIT=2048M
 PHP_ENABLE_XDEBUG=false
-UPDATE_UID_GID=false
+UPDATE_UID_GID=true
 DEBUG=false
 ENABLE_SENDMAIL=true
 UPLOAD_MAX_FILESIZE=64M
