MAGECLOUD-1205: Introduce Docker environment (#77)

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ dist: trusty
 addons:
   hosts:
       - magento2.travis
+      - magento2.docker
 services:
   - mysql
+  - docker
 language: php
 php:
   - 7.0
@@ -18,10 +20,13 @@ env:
     - TEST_SUITE=static
     - TEST_SUITE=unit
     - TEST_SUITE=integration
+    - TEST_SUITE=integration-docker
 matrix:
   exclude:
     - php: 7.1
       env: TEST_SUITE=integration
+    - php: 7.1
+      env: TEST_SUITE=integration-docker
 cache:
   apt: true
   directories:
@@ -33,3 +38,4 @@ script:
   - if [ $TEST_SUITE == "static" ]; then phpmd src xml tests/static/phpmd-ruleset.xml; fi;
   - if [ $TEST_SUITE == "unit" ]; then phpunit --configuration tests/unit/phpunit.xml.dist; fi;
   - if [ $TEST_SUITE == "integration" ]; then phpunit --verbose --configuration tests/integration/phpunit.xml.dist; fi;
+  - if [ $TEST_SUITE == "integration-docker" ]; then cd tests/integration-docker && docker-compose run cli magento-command; fi;
