--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,11 @@
     "illuminate/config": "^5.5"
   },
   "bin": [
+    "bin/ece-tools",
     "m2-ece-build",
     "m2-ece-deploy",
     "m2-ece-scd-dump",
-    "bin/ece-tools"
+    "m2-ece-post-deploy"
   ],
   "autoload": {
     "psr-4": {
