--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "php": "^7.0",
     "monolog/monolog": "^1.17",
     "symfony/console": "^2.6",
+    "illuminate/contracts": "^5.5",
     "illuminate/container": "^5.5",
     "illuminate/config": "^5.5",
     "psr/log": "^1.0",
