MAGECLOUD-1342: Add RepositoryFactory class to create repositories from raw config

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,11 @@
       "Magento\\MagentoCloud\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Magento\\MagentoCloud\\Test\\": "tests/static/"
+    }
+  },
   "scripts": {
     "test": [
       "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
