--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "psr/container": "^1.0",
     "composer/composer": "@stable",
     "composer/semver": "^1.4",
-    "symfony/yaml": "^3.3"
+    "symfony/yaml": "^3.3",
+    "phpunit/php-timer": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
