--- a/.travis.yml
+++ b/.travis.yml
@@ -39,4 +39,4 @@ script:
   - if [ $TEST_SUITE == "static" ]; then phpunit --configuration tests/unit/phpunit.xml.dist --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml $MIN_CODE_COVERAGE; fi;
   - if [ $TEST_SUITE == "unit" ]; then phpunit --configuration tests/unit/phpunit.xml.dist; fi;
   - if [ $TEST_SUITE == "integration" ]; then phpunit --verbose --configuration tests/integration/phpunit.xml.dist; fi;
-  - if [ $TEST_SUITE == "integration-docker" ]; then cd tests/integration-docker && docker-compose run cli magento-command; fi;
+  - if [ $TEST_SUITE == "integration-docker" ]; then phpunit --verbose --configuration tests/integration-docker/phpunit.xml.dist; fi;
