MAGECLOUD-1283: Add Acceptance test to Docker environment

--- a/tests/integration-docker/environment.php.dist
+++ b/tests/integration-docker/environment.php.dist
@@ -6,11 +6,11 @@ return [
     'relationships' => [
         'database' => [
             0 => [
-                'host' => 'db',
+                'host' => '127.0.0.1',
                 'path' => 'magento2',
                 'password' => 'magento2',
                 'username' => 'magento2',
-                'port' => '3306',
+                'port' => '3308',
             ],
         ],
     ],
