--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "2"
+version: '2'
 services:
   web:
-    build: ./nginx
+    build: ./docker/nginx
     ports:
       - 80
     links:
@@ -10,15 +10,15 @@ services:
     volumes_from:
       - appdata
     env_file:
-      - ./global.env
+      - ./docker/global.env
     environment:
       - VIRTUAL_HOST=magento2.docker
       - VIRTUAL_PORT=80
       - HTTPS_METHOD=noredirect
 
   fpm:
-    hostname: fpm.magento2.docker
-    build: ./7.0-fpm
+    hostname: magento2.docker
+    build: ./docker/7.0-fpm
     ports:
       - 9000
     links:
@@ -26,25 +26,26 @@ services:
     volumes_from:
       - appdata
     env_file:
-      - ./global.env
+      - ./docker/global.env
 
   cli:
     hostname: cli.magento2.docker
-    build: ./7.0-cli
+    build: ./docker/7.0-cli
     links:
       - db
+#    This must be uncommented once std integration plan is removed
+#    volumes:
+#      - ~/.composer/cache:/root/.composer/cache
     volumes_from:
       - appdata
     env_file:
-      - ./global.env
-      - ./composer.env
-    environment:
-      - M2SETUP_VERSION=2.2.*
+      - ./docker/global.env
+      - ./docker/composer.env
 
   db:
     image: mariadb:10
     ports:
-      - "3308:3306"
+      - 3306
     volumes_from:
       - dbdata
     environment:
@@ -56,7 +57,7 @@ services:
   appdata:
     image: tianon/true
     volumes:
-      - ./magento:/var/www/magento
+      - .:/var/www/magento
 
   dbdata:
     image: tianon/true
