--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
       "phpmd src xml tests/static/phpmd-ruleset.xml",
       "phpunit --configuration tests/unit/phpunit.xml.dist"
     ],
-    "test-coverage": "phpunit --configuration tests/unit/phpunit.xml.dist --coverage-html tests/unit/tmp/coverage"
+    "test-coverage": "phpunit --configuration tests/unit/phpunit.xml.dist --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml 85",
+    "test-coverage-generate": "phpunit --configuration tests/unit/phpunit.xml.dist --coverage-html tests/unit/tmp/coverage"
   },
   "prefer-stable": true
 }
