--- a/docker/nginx/etc/vhost.conf
+++ b/docker/nginx/etc/vhost.conf
@@ -10,5 +10,5 @@ upstream fastcgi_backend {
     set $MAGE_ROOT !MAGENTO_ROOT!;
     set $MAGE_MODE !MAGENTO_RUN_MODE!;
 
-#    include $MAGE_ROOT/tests/integration/sandbox-docker/nginx.conf.sample;
+#    include /var/www/magento/tests/integration/tmp/sandbox-docker/nginx.conf.sample;
  }
