--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     "psr/container": "^1.0",
     "composer/composer": "@stable",
     "composer/semver": "^1.4",
-    "symfony/yaml": "^3.3",
-    "magento/ece-patches": "^102.0.4"
+    "symfony/yaml": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
