--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
     "bin/ece-tools",
     "m2-ece-build",
     "m2-ece-deploy",
-    "m2-ece-scd-dump",
-    "m2-apply-patches"
+    "m2-ece-scd-dump"
   ],
   "autoload": {
     "psr-4": {
