1. Re-arranging docker-compose to start nginx after PHP-FPM 2. Adding php to nginx.conf to pages will serve 3. Refactoring tests to reference a particular URL for docker 4. Added grouping to ease running nginx specific docker tests

--- a/tests/integration/etc/environment.php.docker.dist
+++ b/tests/integration/etc/environment.php.docker.dist
@@ -35,5 +35,6 @@ return [
         'name' => 'magento/project-enterprise-edition',
         'version' => '^2.2',
     ],
-    'skip_front_check' => true,
+    'skip_front_check' => false,
+    'APPLICATION_URL' => 'http://web/',
 ];
