--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,27 @@
 version: '2'
 services:
-  web:
-    build: ./docker/nginx
-    ports:
-      - 80
-    links:
-      - fpm
-      - db
-    volumes_from:
-      - appdata
-    env_file:
-      - ./docker/global.env
-    environment:
-      - VIRTUAL_HOST=magento2.docker
-      - VIRTUAL_PORT=80
-      - HTTPS_METHOD=noredirect
+  appdata:
+    image: tianon/true
+    volumes:
+      - .:/var/www/magento
+
+  dbdata:
+    image: tianon/true
+    volumes:
+      - /var/lib/mysql
 
   fpm:
     hostname: fpm.magento2.docker
     build: ./docker/7.0-fpm
     ports:
-      - 9000
+      - "9000"
     links:
       - db
     volumes_from:
       - appdata
     env_file:
       - ./docker/global.env
+      - ./docker/composer.env
 
   cli:
     hostname: cli.magento2.docker
@@ -41,7 +36,6 @@ services:
     env_file:
       - ./docker/global.env
       - ./docker/composer.env
-
   db:
     image: mariadb:10
     ports:
@@ -53,13 +47,20 @@ services:
       - MYSQL_DATABASE=magento2
       - MYSQL_USER=magento2
       - MYSQL_PASSWORD=magento2
+  web:
+    build: ./docker/nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    links:
+      - fpm
+      - db
+    volumes_from:
+      - appdata
+    env_file:
+      - ./docker/global.env
+    environment:
+      - VIRTUAL_HOST=magento2.docker
+      - VIRTUAL_PORT=80
+      - HTTPS_METHOD=noredirect
 
-  appdata:
-    image: tianon/true
-    volumes:
-      - .:/var/www/magento
-
-  dbdata:
-    image: tianon/true
-    volumes:
-      - /var/lib/mysql
