--- a/docker/nginx/etc/vhost.conf
+++ b/docker/nginx/etc/vhost.conf
@@ -10,5 +10,19 @@ upstream fastcgi_backend {
     set $MAGE_ROOT !MAGENTO_ROOT!;
     set $MAGE_MODE !MAGENTO_RUN_MODE!;
 
-#    include /var/www/magento/app/nginx.conf.sample;
+    index index.php index.html;
+    server_name php-docker.local;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+    root /var/www/magento/app;
+
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass fpm:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
  }
