MAGECLOUD-1283: Add Acceptance test to Docker environment

--- a/docker/nginx/etc/vhost.conf
+++ b/docker/nginx/etc/vhost.conf
@@ -5,8 +5,6 @@ upstream fastcgi_backend {
     listen 80;
     listen 443 ssl;
 
-    server_name localhost;
-
     set $MAGE_ROOT !MAGENTO_ROOT!;
     set $MAGE_MODE !MAGENTO_RUN_MODE!;
 
@@ -14,7 +12,7 @@ upstream fastcgi_backend {
     server_name php-docker.local;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/magento/app;
+    root /var/www/magento/app/pub;
 
     location ~ \.php$ {
         try_files $uri =404;
