MAGECLOUD-1283: Add Acceptance test to Docker environment

--- a/tests/integration/etc/environment.php.docker.dist
+++ b/tests/integration/etc/environment.php.docker.dist
@@ -35,5 +35,5 @@ return [
         'name' => 'magento/project-enterprise-edition',
         'version' => '^2.2',
     ],
-    'skip_front_check' => false,
+    'skip_front_check' => true,
 ];
