MAGECLOUD-1283: Add Acceptance test to Docker environment

--- a/docker/nginx/etc/vhost.conf
+++ b/docker/nginx/etc/vhost.conf
@@ -9,10 +9,10 @@ upstream fastcgi_backend {
     set $MAGE_MODE !MAGENTO_RUN_MODE!;
 
     index index.php index.html;
-    server_name php-docker.local;
+    server_name magento2.docker;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/magento/app/pub;
+    root $MAGE_ROOT/app/pub;
 
     location ~ \.php$ {
         try_files $uri =404;
