--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,8 @@
-version: "2"
+version: '2'
 services:
-  web:
-    build: ./nginx
-    ports:
-      - 80
-    links:
-      - fpm
-      - db
-    volumes_from:
-      - appdata
-    env_file:
-      - ./global.env
-    environment:
-      - VIRTUAL_HOST=magento2.docker
-      - VIRTUAL_PORT=80
-      - HTTPS_METHOD=noredirect
-
   fpm:
     hostname: fpm.magento2.docker
-    build: ./7.0-fpm
+    build: ./docker/7.0-fpm
     ports:
       - 9000
     links:
@@ -26,20 +10,22 @@ services:
     volumes_from:
       - appdata
     env_file:
-      - ./global.env
+      - ./docker/global.env
+      - ./docker/composer.env
 
   cli:
     hostname: cli.magento2.docker
-    build: ./7.0-cli
+    build: ./docker/7.0-cli
     links:
       - db
+#    This must be uncommented once std integration plan is removed
+#    volumes:
+#      - ~/.composer/cache:/root/.composer/cache
     volumes_from:
       - appdata
     env_file:
-      - ./global.env
-      - ./composer.env
-    environment:
-      - M2SETUP_VERSION=2.2.*
+      - ./docker/global.env
+      - ./docker/composer.env
 
   db:
     image: mariadb:10
@@ -52,12 +38,23 @@ services:
       - MYSQL_DATABASE=magento2
       - MYSQL_USER=magento2
       - MYSQL_PASSWORD=magento2
-      - TERM=meh
+
+  web:
+    build: ./docker/nginx
+    ports:
+      - "8080:80"
+    links:
+      - fpm
+      - db
+    volumes_from:
+      - appdata
+    env_file:
+      - ./docker/global.env
 
   appdata:
     image: tianon/true
     volumes:
-      - ./magento:/var/www/magento
+      - .:/var/www/magento
 
   dbdata:
     image: tianon/true
