--- a/tests/integration/phpunit.xml.dist
+++ b/tests/integration/phpunit.xml.dist
@@ -14,5 +14,6 @@
     </testsuites>
     <php>
         <ini name="date.timezone" value="UTC"/>
+        <ini name="memory_limit" value="2048M"/>
     </php>
 </phpunit>
