--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "psr/container": "^1.0",
     "composer/composer": "@stable",
     "composer/semver": "^1.4",
-    "symfony/yaml": "^3.3"
+    "symfony/yaml": "^2.3||^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
@@ -27,7 +27,8 @@
     "phpunit/php-code-coverage": "^5.2"
   },
   "replace": {
-    "magento/ece-patches": "*"
+    "magento/ece-patches": "*",
+    "magento/magento-cloud-configuration": "*"
   },
   "bin": [
     "bin/ece-tools",
