MAGECLOUD-1724: Add 2.1 Acceptance test

--- a/tests/integration/phpunit.xml.dist
+++ b/tests/integration/phpunit.xml.dist
@@ -6,6 +6,7 @@
          columns="max"
          bootstrap="../../bootstrap.php"
          beStrictAboutTestsThatDoNotTestAnything="false"
+         stopOnFailure="true"
 >
     <testsuites>
         <testsuite name="Unit">
