--- a/tests/integration/phpunit.xml.dist
+++ b/tests/integration/phpunit.xml.dist
@@ -4,8 +4,9 @@
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/6.1/phpunit.xsd"
          colors="true"
          columns="max"
-         bootstrap="bootstrap.php"
+         bootstrap="../../bootstrap.php"
          beStrictAboutTestsThatDoNotTestAnything="false"
+         stopOnFailure="true"
 >
     <testsuites>
         <testsuite name="Unit">
