--- a/docker-compose-7.1.yml
+++ b/docker-compose-7.1.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   fpm:
     hostname: fpm.magento2.docker
-    build: ./docker/7.0-fpm
+    image: shiftedreality/magento-cloud-docker-php:7.1-fpm
     ports:
       - 9000
     links:
@@ -11,21 +11,25 @@ services:
       - appdata
     env_file:
       - ./docker/global.env
+      - ./docker/config.env
       - ./docker/composer.env
 
   cli:
     hostname: cli.magento2.docker
-    build: ./docker/7.0-cli
+    image: shiftedreality/magento-cloud-docker-php:7.1-cli
     links:
       - db
-#    This must be uncommented once std integration plan is removed
-#    volumes:
-#      - ~/.composer/cache:/root/.composer/cache
+    volumes:
+      - ~/.composer/cache:/root/.composer/cache
     volumes_from:
       - appdata
     env_file:
       - ./docker/global.env
+      - ./docker/config.env
       - ./docker/composer.env
+    environment:
+      - M2_CLEAN_COMPOSER=true
+      - M2_SAMPLE_DATA=false
 
   db:
     image: mariadb:10
@@ -40,7 +44,7 @@ services:
       - MYSQL_PASSWORD=magento2
 
   web:
-    build: ./docker/nginx
+    image: shiftedreality/magento-cloud-docker-nginx:1.9
     ports:
       - "8080:80"
     links:
@@ -50,6 +54,8 @@ services:
       - appdata
     env_file:
       - ./docker/global.env
+      - ./docker/config.env
+      - ./docker/composer.env
 
   appdata:
     image: tianon/true
