--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
 install:
   - docker-compose -f docker-compose-${PHP}.yml run cli bash -c "composer install -n -d /var/www/magento"
 before_script:
+  - sudo chown -R www-data:www-data .
   - docker-compose -f docker-compose-${PHP}.yml up -d --build
   - docker-compose -f docker-compose-${PHP}.yml run cli bash -c "sudo -u www-data -- /var/www/magento/vendor/bin/phpunit"
 script: ./tests/travis/script.sh
