--- a/docker-compose-7.0.yml
+++ b/docker-compose-7.0.yml
@@ -61,6 +61,7 @@ services:
     image: tianon/true
     volumes:
       - .:/var/www/magento
+      - /var/www/sandbox
 
   dbdata:
     image: tianon/true
