--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ services:
 language: generic
 env:
   matrix:
-#    - TEST_SUITE=static-unit PHP=7.0
-#    - TEST_SUITE=static-unit PHP=7.1
+    - TEST_SUITE=static-unit PHP=7.0
+    - TEST_SUITE=static-unit PHP=7.1
     - TEST_SUITE=integration PHP=7.0
     - TEST_SUITE=integration PHP=7.1
 cache:
